	-- Let PooledDataSource implement AutoCloseable.
	   This necessitates targeting Java 7, rather than Java 6, classfiles.
	   Thanks koszta5!
	-- Bring documentation of acquireRetryAttempts into sync with c3p0's actual behavior.
	   See https://github.com/swaldman/c3p0/issues/132
           Thanks marcatl, MichaelMih, Leona Nezvalova!
	-- Include license files in published source jar.
	   See https://github.com/swaldman/c3p0/issues/167
c3p0-0.10.0-pre2
	-- Add "Automatic-Module-Name" entry to jar manifest for interoperability with Project Jigsaw / Java 9 modules
	   See https://github.com/swaldman/c3p0/issues/171
	   Thanks Jörg Hohwiller
	-- Try context ClassLoader if library ClassLoader fails to load a named, necessary driver class.
	   See https://github.com/swaldman/c3p0/pull/115
	   Thanks Rodrigo Merino!
	-- Let statement cache fail not-quietly if drivers provide PreparedStatements without a proper equals implementation.
	   See https://github.com/swaldman/c3p0/pull/59/
	   Thanks Thomas Beckmann!
	-- Be slightly less negative in the docs about unreturnedConnectionTimeout.
	   See https://github.com/swaldman/c3p0/pull/160
	   Thanks Matteo Mazza!
	-- Implement more robustly accurate checkoutTimeout.
	   See https://github.com/swaldman/c3p0/pull/138 https://github.com/swaldman/c3p0/issues/137
	   Thanks François JACQUES!
	-- Add support for JDBC 4.3 beginRequest and endRequest methods.
	   See https://github.com/swaldman/c3p0/pull/170
	   Thanks Fernanda Meheust!
	-- Consider ourselves to be a wrapper for a thing if the thing we wrap itself declares itself
	   as the wrapper of that thing. See https://github.com/swaldman/c3p0/pull/149
	   Thanks François JACQUES!
	-- Fix rare ConcurrentModificationException in GooGooStatementCache when Connections are
	   closed. See https://github.com/swaldman/c3p0/pull/22
	   Thanks Mathilde Ffrench, Joel Caplin!
c3p0-0.10.0-pre1
	-- Fix doc comments no longer acceptable under persnicketty JDK 11